--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,32 +1,68 @@
-<h1>Burgers!</h1>
+<div class="container">
 
-<h2>Burgers not devoured!</h2>
-
-{{#each burgers}}
-  {{#unless devoured}}
-    <p>{{id}}. {{burger_name}}</p>
-  {{/unless}}
-{{/each}}
-
-<h2>Burgers that are devoured!</h2>
-
-{{#each burgers}}
-  {{#if devoured}}
-    <p>{{id}}. {{burger_name}}</p>
-  {{/if}}
-{{/each}}
-
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+  <div class="row">
+    <h1>Burgers!</h1>    
   </div>
 
-  <button type="submit">Add Burger</button>
-</form>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-2">
+      {{#each burgers}}
+        {{#unless devoured}}
+          <p>{{id}}. {{burger_name}} <button class="eat" id="{{id}}"> Devour</button></p>
+        {{/unless}}
+      {{/each}}
+    </div>
+    <div class="col-md-3 col-md-offset-2">
+      {{#each burgers}}
+        {{#if devoured}}
+          <p>{{id}}. {{burger_name}}</p>
+        {{/if}}
+      {{/each}}
+    </div>
+  </div>
+  
+  <div class="row">
+    <h2>Add a Burger</h2>
+    <form class="create-form">
+
+      <div class="form-group">
+        <label for="ca">Burger Name:</label>
+        <input type="text" id="ca" name="name">
+      </div>
+
+      <button type="submit">Add Burger</button>
+    </form>
+  </div>
+</div>
 
 <script type="text/javascript">
+  $(".eat").on("click", function() {
+    var id = $(this).attr("id");
+    
+    $.ajax("/api/burgers/" + id, {
+      type: "PUT",
+    }).then(function() {
+      location.reload();
+    })
+  })
 
+
+  $(".create-form").on("submit", function(event) {
+    // Make sure to preventDefault on a submit event.
+    event.preventDefault();
+
+    var newBurger = {
+      burger_name: $("#ca").val().trim(),
+    };
+
+    // Send the POST request.
+    $.ajax("/api/burgers", {
+      type: "POST",
+      data: newBurger
+    }).then(
+      function() {
+        location.reload();
+      }
+    );
+  });
 </script>
