Added some styling

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="row">
+  <div class="row other">
     <h1>Burgers!</h1>    
   </div>
 
@@ -21,7 +21,7 @@
     </div>
   </div>
   
-  <div class="row">
+  <div class="row other">
     <h2>Add a Burger</h2>
     <form class="create-form">
 
