--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,3 +1,18 @@
-.other {
-	text-align: center;
+body {
+	background-color: yellow;
+}
+
+h1 {
+	background-color: brown;
+	padding: 20px;
+	margin: 0px;
+}
+
+.burgers {
+	padding: 25px;
+}
+
+.add {
+	background-color: yellow;
+	padding: 25px;
 }
