--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,8 @@
+<h1 class="text-center">Burgers!</h1>    
+
 <div class="container">
 
-  <div class="row other">
-    <h1>Burgers!</h1>    
-  </div>
-
-  <div class="row">
+  <div class="row burgers">
     <div class="col-md-3 col-md-offset-2">
       {{#each burgers}}
         {{#unless devoured}}
@@ -20,8 +18,8 @@
       {{/each}}
     </div>
   </div>
-  
-  <div class="row other">
+
+  <div class="row text-center add">
     <h2>Add a Burger</h2>
     <form class="create-form">
 
@@ -33,6 +31,7 @@
       <button type="submit">Add Burger</button>
     </form>
   </div>
+
 </div>
 
 <script type="text/javascript">
